--- a/view.html
+++ b/view.html
@@ -24,7 +24,7 @@
 				// invert the geometry on the x-axis so that all of the faces point inward
 				geometry.scale( - 1, 1, 1 );
 
-				const texture = new THREE.TextureLoader().load( 'textures/2294472375_24a3b8ef46_o.jpg' );
+				const texture = new THREE.TextureLoader().load( 'tex/360.jpg' );
 				const material = new THREE.MeshBasicMaterial( { map: texture } );
 
 				const mesh = new THREE.Mesh( geometry, material );
